# poly-ocr

./: .gitignore  Dockerfile  README.md  cli.py  compose.yaml  make_test_img.py  pyproject.toml  requirements.txt
results/reports/: benchmark.csv  benchmark.json
src/benchmark/: evaluator.py  runner.py
src/config/: languages.py  settings.py
src/dataset/: corruptions.py
src/engines/: base_engine.py  doctr_engine.py  donut_engine.py  easyocr_engine.py  nougat_engine.py  paddleocr_engine.py  tesseract_engine.py  trocr_engine.py
src/metrics/: bleu.py  exact_match.py  levenshtein.py  rouge.py  token_accuracy.py  wer.py
src/utils/: plotter.py
