[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "polyocr-bench"
version = "0.1.0"
description = "Multilingual OCR benchmarking framework"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "Pillow",
    "opencv-python",
    "matplotlib",
    "psutil",
    "pytesseract",
    "easyocr",
    "torch",
    "torchvision",
    "transformers",
    "python-doctr[torch]",
    "python-Levenshtein",
    "nltk",
    "rouge-score",
    "albumentations",
]

[project.scripts]
polyocr = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
